Finished catalog adaptive

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Новый проект</title>
+    <title>Главная</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +22,8 @@
         <div class="header__inner">
           <div class="top-menu">
             <ul class="menu-list">
-              <li class="menu__item"><a class="menu__link menu__link--active" href="#">Главная</a></li>
-              <li class="menu__item"><a class="menu__link" href="#">Каталог</a></li>
+              <li class="menu__item"><a class="menu__link menu__link--active" href="index.html">Главная</a></li>
+              <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог</a></li>
             </ul><a class="phone" href="tel:+79155612976">+7 (915) 561-29-76
               <svg width="30" height="35">
                 <use xlink:href="img/icons/sprite.svg#phone"> </use>
@@ -38,8 +38,7 @@
               <div class="logo__subtitle">Доставка по всей России</div><img src="img/sun.svg" width="90" height="55" alt="Логотип">
             </div>
             <h1 class="main-title">Приветствуем в нашем магазине мягких игрушек<img class="shark-header" src="img/shark-header@1x.png" width="202" height="132" alt="Акула"></h1><img class="header-line" src="img/header-line.svg" width="308" height="119" alt="">
-            <div class="catalog">
-              <div class="catalog__circle">Каталог</div>
+            <div class="catalog"><a class="catalog__circle" href="catalog.html">Каталог</a>
               <div class="catalog__text">Жми, не укусит</div>
             </div>
           </div>
@@ -140,15 +139,14 @@
                 </svg></a>
             </div>
           </div>
-          <div class="catalog catalog--footer">
-            <div class="catalog__circle catalog__circle--footer">Каталог</div>
-          </div>
+          <div class="catalog catalog--footer"><a class="catalog__circle catalog__circle--footer" href="catalog.html">Каталог</a></div>
           <div class="fourth-col"><img class="unicorn" src="img/unicorn@1x.png" width="235" height="176" alt="Игрушка единорог"><img class="unicorn-line" src="img/unicorn-line.svg" width="92" height="116" alt=""></div>
         </div>
       </footer>
     </div>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/main-slider.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
