--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__inner">
           <div class="top-menu">
             <ul class="menu-list">
-              <li class="menu__item"><a class="menu__link" href="index.html">Главная</a></li>
+              <li class="menu__item"><a class="menu__link menu__link--active" href="index.html">Главная</a></li>
               <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог</a></li>
             </ul><a class="phone" href="tel:+79155612976">+7 (915) 561-29-76
               <svg width="30" height="35">
