Finished cards js desktop

--- a/catalog.html
+++ b/catalog.html
@@ -256,6 +256,9 @@
             <div class="to-cart-btn">В корзину</div>
           </div>
         </div>
+        <div class="full-img">
+          <div class="full-img-close"></div><img src="img/card-shark-full@2x.jpg" width="900" height="900" alt="">
+        </div>
       </div>
     </div>
     <script src="js/jquery-3.5.1.js"></script>
