Finished card adaptation

--- a/catalog.html
+++ b/catalog.html
@@ -247,12 +247,14 @@
           </div>
           <div class="right-col">
             <div class="toy-title"></div>
-            <div class="img-list">
-              <div class="img__item img__item-first"><img src="#" width="65" height="65" alt=""></div>
-              <div class="img__item img__item-second"><img src="#" width="65" height="65" alt=""></div>
-              <div class="img__item img__item-third"><img src="#" width="65" height="65" alt=""></div>
+            <div class="images-wrap">
+              <div class="img-list">
+                <div class="img__item img__item-first"><img src="#" width="65" height="65" alt=""></div>
+                <div class="img__item img__item-second"><img src="#" width="65" height="65" alt=""></div>
+                <div class="img__item img__item-third"><img src="#" width="65" height="65" alt=""></div>
+              </div>
+              <div class="img__item-big"><img src="#" width="333" height="333" alt=""></div>
             </div>
-            <div class="img__item-big"><img src="#" width="333" height="333" alt=""></div>
             <div class="to-cart-btn">В корзину</div>
           </div>
         </div>
