Finished cart adaptation

--- a/catalog.html
+++ b/catalog.html
@@ -57,8 +57,7 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="avocado">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="details-btn" data-card="avocado">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -76,8 +75,7 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="shark">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="details-btn" data-card="shark">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -95,8 +93,7 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="lama">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="details-btn" data-card="lama">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -114,8 +111,7 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="cat">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="details-btn" data-card="cat">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -133,8 +129,7 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="corgi">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="details-btn" data-card="corgi">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -152,8 +147,7 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="seal">Подробнее</div>
-                  <div class="to-cart-btn">В корзину</div>
+                  <div class="details-btn" data-card="seal">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
                 </div>
               </div>
             </div>
