Corrected cart & form links

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
               <svg width="30" height="35">
                 <use xlink:href="img/icons/sprite.svg#phone"> </use>
               </svg></a>
-          </div><a class="cart-link" href="#">
+          </div><a class="cart-link" href="cart.html">
             <svg class="cart" width="33" height="35">
               <use xlink:href="img/icons/sprite.svg#cart"></use>
             </svg></a>
@@ -57,7 +57,8 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="avocado">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
+                  <div class="details-btn" data-card="avocado">Подробнее</div>
+                  <div class="to-cart-btn">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -75,7 +76,8 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="shark">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
+                  <div class="details-btn" data-card="shark">Подробнее</div>
+                  <div class="to-cart-btn">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -93,7 +95,8 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="lama">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
+                  <div class="details-btn" data-card="lama">Подробнее</div>
+                  <div class="to-cart-btn">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -111,7 +114,8 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="cat">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
+                  <div class="details-btn" data-card="cat">Подробнее</div>
+                  <div class="to-cart-btn">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -129,7 +133,8 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="corgi">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
+                  <div class="details-btn" data-card="corgi">Подробнее</div>
+                  <div class="to-cart-btn">В корзину</div>
                 </div>
               </div>
               <div class="catalog-slide">
@@ -147,7 +152,8 @@
                   <div class="count__number">1</div>
                 </div>
                 <div class="catalog-slide-btns">
-                  <div class="details-btn" data-card="seal">Подробнее</div><a class="to-cart-btn" href="cart.html">В корзину</a>
+                  <div class="details-btn" data-card="seal">Подробнее</div>
+                  <div class="to-cart-btn">В корзину</div>
                 </div>
               </div>
             </div>
