--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
               <svg width="30" height="35">
                 <use xlink:href="img/icons/sprite.svg#phone"> </use>
               </svg></a>
-          </div><a class="cart-link" href="#">
+          </div><a class="cart-link" href="cart.html">
             <svg class="cart" width="33" height="35">
               <use xlink:href="img/icons/sprite.svg#cart"></use>
             </svg></a>
