Finished cart js

--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
           </div><a class="cart-link" href="cart.html">
             <svg class="cart" width="33" height="35">
               <use xlink:href="img/icons/sprite.svg#cart"></use>
-            </svg></a>
+            </svg><span class="cart__num">0</span></a>
           <div class="header-content">
             <div class="logo">
               <div class="logo__title">Aurora Toys</div>
@@ -235,8 +235,8 @@
               <div class="price-block">
                 <div class="toy-count">
                   <div class="count-arrows">
-                    <div class="count__arrow-left">&#60;</div>
-                    <div class="count__arrow-right">&#62;</div>
+                    <div class="count__arrow-minus">&#60;</div>
+                    <div class="count__arrow-plus">&#62;</div>
                   </div>
                   <div class="toy__number">1</div>
                 </div>
@@ -255,7 +255,7 @@
               </div>
               <div class="img__item-big"><img src="#" width="333" height="333" alt=""></div>
             </div>
-            <div class="to-cart-btn">В корзину</div>
+            <div class="to-cart-btn--card">В корзину</div>
           </div>
         </div>
         <div class="full-img">
