--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               </svg></a>
           </div><a class="cart-link" href="cart.html">
             <svg class="cart" width="33" height="35">
-              <use xlink:href="img/icons/sprite.svg#cart"> </use>
-            </svg></a>
+              <use xlink:href="img/icons/sprite.svg#cart"></use>
+            </svg><span class="cart__num">0</span></a>
           <div class="header-content">
             <div class="logo">
               <div class="logo__title">Aurora Toys</div>
