--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
           </div><a class="cart-link" href="cart.html">
             <svg class="cart" width="33" height="35">
               <use xlink:href="img/icons/sprite.svg#cart"></use>
-            </svg></a>
+            </svg><span class="cart__num">0</span></a>
           <div class="header-content">
             <div class="logo">
               <div class="logo__title">Aurora Toys</div>
