Optimized full img for mobile

--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
         </div>
       </header>
       <div class="overlay">
-        <form class="form">
+        <form class="form" action="mail.php" method="post">
           <div class="form__back">Назад
             <svg width="26" height="15">
               <use xlink:href="img/icons/sprite.svg#left-arrow"></use>
